# autograph-ng

./: Cargo.toml  Graph.toml  NOTES.md  Settings.toml  build.rs
alembic-rs/alembic/: Cargo.toml
alembic-rs/alembic-sys/: build.rs
api/: Cargo.toml
api-boilerplate/: Cargo.toml
api-boilerplate/src/: lib.rs
api-extra/: Cargo.toml
api-extra/src/: blackboard.rs  commandext.rs  quad.rs
api-gl/: Cargo.toml
api-gl/src/: aliaspool.rs  backend.rs  format.rs  framebuffer.rs  image.rs  lib.rs  prelude.rs  sampler.rs  swapchain.rs  window.rs
api-gl/src/buffer/: mod.rs  upload.rs
api-gl/src/command/: mod.rs  state.rs
api-gl/src/pipeline/: arguments.rs  mod.rs  program.rs  shader.rs  vao.rs
api-gl/src/util/: mod.rs
api-test/: Cargo.toml
api-test/src/: lib.rs
api/examples/: lyon_tessellation.rs  path.vert
api/macros/: Cargo.toml
api/macros/src/: arguments.rs  lib.rs
api/macros/tests/: arguments.rs  layout.rs
api/src/: buffer.rs  command.rs  descriptor.rs  image.rs  lib.rs  prelude.rs  swapchain.rs  traits.rs  typedesc.rs  vertex.rs
api/src/pipeline/: mod.rs  validate.rs
api/tests/: validation.rs
backend_gl/: Cargo.toml
backend_gl/src/: api.rs  backend.rs  buffer.rs  cmd.rs  descriptor.rs  format.rs  framebuffer.rs  image.rs  lib.rs  pipeline.rs  pipeline_file.rs  pool.rs  resource.rs  state.rs  sync.rs  upload.rs  util.rs  window.rs
backend_gl/src/shader/: mod.rs  preprocessor.rs
common_shaders/: Cargo.toml
common_shaders/src/: blit.frag  blit.rs  blit.vert  lib.rs
derive/: Cargo.toml
derive/src/: buffer_layout.rs  descriptor_set_interface.rs  lib.rs
derive/tests/: buffer_layout.rs  descriptor_set_interface.rs
design/: NOTES.md  TODO.md  hot_reloadable_shaders.md  pipeline_gui.md
examples/: blit.rs  simple.rs
examples/common/: mod.rs
extension_runtime/: Cargo.toml
extension_runtime/macros/: Cargo.toml
extension_runtime/macros/src/: lib.rs
extension_runtime/src/: lib.rs
extension_runtime/tests/: load_dylib.rs  reload.rs
extension_runtime/tests/test_dylib/: Cargo.toml
extension_runtime/tests/test_dylib/src/: lib.rs
gfx2_derive/: Cargo.toml
gfx2_derive/src/: buffer_layout.rs
gfx2_derive/tests/: buffer_layout.rs  descriptor_set_interface.rs
imgui/: Cargo.toml
imgui/src/: imgui.frag  imgui.vert  lib.rs
imgui/tests/: simple.rs
old/frame/: alloc.rs
openimageio-rs/openimageio/: Cargo.toml
openimageio-rs/openimageio-sys/: build.rs
plugin/: Cargo.toml
plugin/macros/: Cargo.toml
plugin/macros/src/: lib.rs
plugin/src/: lib.rs
plugin/tests/: load_dylib.rs  reload.rs
plugin/tests/test_dylib/: Cargo.toml
plugin/tests/test_dylib/src/: lib.rs
render/: Cargo.toml
render-boilerplate/: Cargo.toml
render-boilerplate/src/: lib.rs
render-extra/: Cargo.toml
render-extra/src/: blackboard.rs  commandext.rs  lib.rs  quad.rs
render-gl/: Cargo.toml  build.rs
render-gl/src/: aliaspool.rs  api.rs  backend.rs  buffer.rs  cmd.rs  descriptor.rs  format.rs  framebuffer.rs  image.rs  lib.rs  pipeline.rs  pipeline_file.rs  pool.rs  prelude.rs  resource.rs  sampler.rs  state.rs  swapchain.rs  sync.rs  upload.rs  util.rs  window.rs
render-test/: Cargo.toml
render-test/src/: lib.rs
render/examples/: background.frag  background.vert  blit.rs  lyon_tessellation.rs  simple.rs
render/examples/common/: mod.rs
render/macros/: Cargo.toml
render/macros/src/: arguments.rs  buffer_layout.rs  descriptor_set_interface.rs  layout.rs  lib.rs  pipeline_interface.rs
render/macros/tests/: arguments.rs  buffer_layout.rs  descriptor_set_interface.rs  interface.rs  layout.rs
render/src/: arena.rs  buffer.rs  cmd.rs  command.rs  descriptor.rs  error.rs  framebuffer.rs  handle.rs  image.rs  interface.rs  lib.rs  pipeline.rs  prelude.rs  swapchain.rs  sync.rs  traits.rs  typedesc.rs  vertex.rs
render/src/pipeline/: mod.rs  validate.rs
render/tests/: validation.rs
renderer/: Cargo.toml
renderer/examples/: blit.rs  simple.rs
renderer/examples/common/: mod.rs
renderer/src/: arena.rs  backend.rs  buffer.rs  cmd.rs  descriptor.rs  format.rs  image.rs  interface.rs  lib.rs  shader.rs  traits.rs  util.rs
shader/: Cargo.toml
shader/macros/: Cargo.toml
shader/macros/src/: lib.rs  preprocessor.rs  reflection.rs
shader/src/: lib.rs
shader_macros/: Cargo.toml
shader_macros/src/: lib.rs  preprocessor.rs
spirv/: Cargo.toml
spirv/src/: ast.rs  decode.rs  edit.rs  inst.rs  layout.rs  lib.rs
src/: app.rs  buffer.rs  context.rs  fence.rs  format.rs  frame.rs  graphviz.rs  handle.rs  image.rs  import.rs  lib.rs  main.rs  presentation.rs  renderer.rs  resource.rs  sync.rs  texture.rs  upload_buffer.rs  window.rs
src/alloc/: mod.rs
src/app/: mod.rs
src/device/: mod.rs  physical_device.rs  queue.rs  traits.rs
src/frame/: alloc.rs  compute.rs  dependency.rs  dump.rs  graph.rs  graphics.rs  graphviz.rs  mod.rs  present.rs  renderpass.rs  resource.rs  sched.rs  transfer.rs
src/image/: attachment.rs  description.rs  dimension.rs  generic.rs  mod.rs  swapchain.rs  traits.rs  unbound.rs  wrapper.rs
src/instance/: mod.rs
src/memory/: linear_pool.rs  mod.rs
src/renderer/: buffer.rs  cmd.rs  command_buffer.rs  format.rs  handles.rs  image.rs  interface.rs  mod.rs  sampler.rs  shader_interface.rs  sync.rs  util.rs
src/surface/: mod.rs  native.rs
src/swapchain/: mod.rs  surface.rs  swapchain.rs
src/sync/: frame.rs  mod.rs  (+1 more)
style-test/: Cargo.toml
style-test/src/: common.glsl  edgeDetectionCommon.frag.glsl  edgeDetectionDoGRGBD.frag  edgeDetectionSobelRGBD.frag  gradientEdgesWC.frag  main.rs  pigmentApplicationCommon.frag.glsl  pigmentApplicationOP.frag  pigmentApplicationWC.frag  quad.vert  quadSampler.frag.glsl  quadSampler.vert  substrateCommon.frag.glsl  substrateDeferredImpastoLighting.frag  substrateDeferredLighting.frag  substrateDistortion.frag  substrateDistortionEdges.frag  watercolorFilterCommon.frag.glsl  watercolorFilterH.frag  watercolorFilterV.frag  watercolorShading.frag  watercolorShading.vert
xxgui/: Cargo.toml
xxgui/src/: lib.rs
xxgui/tests/: path.frag  path.vert  simple.rs
(+93 files in other folders)
