[profile.release]
debug = true

[package]
name = "gfx2"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
build = "build.rs"
edition = '2018'

[build-dependencies]
gl_generator = "*"
embed-resource = "*"

[dev-dependencies]
image = "*"
gfx2_derive = { path = "gfx2_derive" }

[dependencies]
bitflags = "*"
config = "*"
winit = "*"
num-traits = "*"
glutin = "*"
pretty_env_logger = "*"
log = "*"
slotmap = { version = "*", features = ["unstable"] }
time = "*"
sid_vec = "*"
regex="*"
smallvec = "*"
lazy_static = "*"
shaderc = "*"
spirv_cross = "*"
spirv_headers = "*"
ordered-float = "*"
unreachable = "*"
typed-arena = "*"
fxhash = "*"
derivative = "*"
nalgebra-glm = { version = "*", optional = true }

[features]
glm-types = ["nalgebra-glm"]

[[example]]
name = "blit"
required-features = ["glm-types"]

[[example]]
name = "simple"
required-features = ["glm-types"]