[package]
name = "autograph-api-boilerplate"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = '2018'

[dependencies]
autograph-api = { path = "../api", features = ["glm"] }
autograph-api-gl = { path = "../api-gl" }
autograph-api-macros = { path = "../api/macros" }
autograph-shader-macros = { path = "../shader/macros" }
image = "0.20.1"
winit = "0.18.0"
glutin = "0.19.0"
pretty_env_logger = "0.3.0"
config = "0.9.1"
log = "0.4.6"
time = "0.1.41"
regex= "1.1.0"
ordered-float = "1.0.1"
