[package]
name = "autograph-api-gl"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
build = "build.rs"
edition = '2018'

[build-dependencies]
gl_generator = "0.10.0"
embed-resource = "1.1.4"

[dependencies]
bitflags = "1.0.4"
config = "0.9.1"
winit = "0.18.0"
#byteorder = "*"
#num-traits = "*"
glutin = "0.19.0"
log = "0.4.6"
slotmap = { version = "0.3.0", features = ["unstable"] }
time = "0.1.41"
regex= "1.1.0"
smallvec = "0.6.7"
lazy_static = "1.2.0"
#spirv_headers = "1.3.4"
ordered-float = "1.0.1"
#unreachable = "1.0.0"
typed-arena = "1.4.1"
fxhash = "0.2.1"
#unsafe-any = "0.4.2"
autograph-api = { path = "../api" }
autograph-spirv = { path = "../spirv" }
dropless-arena = { git = "https://github.com/ennis/dropless-arena" }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.6"