[package]
name = "common_shaders"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
libloading = "0.5.0"
gfx2 = { path = "../renderer", features = ["glm-types"] }
gfx2-extension-runtime = { path = "../extension_runtime" }
