[package]
name = "gfx2-extension-runtime"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

[dependencies]
libloading = "0.5.0"
gfx2-extension-macros = { path = "macros" }
log = "0.4.6"
notify = "4.0.6"

[dev-dependencies]
test_dylib = { path = "../extension_runtime/tests/test_dylib" }
