[package]
name = "autograph-imgui"
description = "Glue for the imgui-rs (dear IMGUI) library."
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = '2018'

[dependencies]
log = "0.4.6"
autograph-render = { path = "../render", features = ["glm-types"] }
imgui = "0.0.22"

[dev-dependencies]
autograph-render-gl = { path = "../render-gl" }
autograph-render-boilerplate = { path = "../render-boilerplate" }
imgui-winit-support = "0.0.22"
winit = "0.18.1"
