[package]
name = "autograph-imgui"
description = "Glue for the imgui-rs (dear IMGUI) library."
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = '2018'

[dependencies]
log = "0.4.6"
autograph-api = { path = "../api", features = ["glm"] }
imgui = "0.0.22"

[dev-dependencies]
autograph-api-gl = { path = "../api-gl" }
autograph-api-boilerplate = { path = "../api-boilerplate" }
imgui-winit-support = "0.0.22"
winit = "0.18.1"
