[package]
name = "autograph-render-boilerplate"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = '2018'

[dependencies]
autograph-render = { path = "../render", features = ["glm"] }
autograph-render-gl = { path = "../render-gl" }
autograph-render-macros = { path = "../render/macros" }
autograph-shader-macros = { path = "../shader/macros" }
image = "0.20.1"
winit = "0.18.0"
glutin = "0.19.0"
pretty_env_logger = "0.3.0"
config = "0.9.1"
log = "0.4.6"
time = "0.1.41"
regex= "1.1.0"
ordered-float = "1.0.1"
