[package]
name = "gfx2"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = '2018'

[dev-dependencies]
image = "*"
gfx2-derive = { path = "../derive" }
gfx2-backend-gl = { path = "../backend_gl" }
winit = "*"
glutin = "*"
pretty_env_logger = "*"
libloading = "*"

[dependencies]
bitflags = "*"
config = "*"
byteorder = "*"
log = "*"
time = "*"
regex="*"
smallvec = "*"
lazy_static = "*"
ordered-float = "*"
fxhash = "*"
derivative = "*"
nalgebra-glm = { version = "*", optional = true }

[features]
glm-types = ["nalgebra-glm"]

[[example]]
name = "blit"
required-features = ["glm-types"]

[[example]]
name = "simple"
required-features = ["glm-types"]