[package]
name = "gfx2-shader-macros"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

[dependencies]
log = "*"
quote = "0.6.10"
syn = { version = "0.15.23", features = ["parsing"] }
darling = "0.8.1"
proc-macro2 = { version = "0.4.24", features = ["nightly"] }
gfx2 = { path = "../renderer" }
lazy_static = "1.2.0"
shaderc = "*"
regex="*"

[lib]
proc-macro = true