[package]
name = "style-test"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = '2018'


[dependencies]
log = "0.4.6"
autograph-render-boilerplate = { path = "../render-boilerplate" }
autograph-render = { path = "../render", features = ["glm-types"] }
autograph-render-gl = { path = "../render-gl" }
openimageio = { path = "../openimageio-rs/openimageio" }
