[package]
name = "style-test"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = '2018'

[dependencies]
log = "0.4.6"
autograph-render-extra = { path = "../render-extra" }
autograph-render-boilerplate = { path = "../render-boilerplate" }
autograph-render = { path = "../render", features = ["glm"] }
autograph-render-gl = { path = "../render-gl" }
autograph-imgui = {path = "../imgui" }
openimageio = { git = "https://github.com/ennis/openimageio-rs" }
imgui-winit-support = "0.0.22"
winit = "0.18.1"
imgui = "0.0.22"

