[package]
name = "xxgui"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = '2018'

[dev-dependencies]
winit = "0.18.1"
glutin = "0.19.0"
config = "0.9.2"
autograph-render-boilerplate = { path = "../render-boilerplate" }

[dependencies]
log = "0.4.6"
lyon = { version = "0.11.0", features = ["extra"] }
font-kit = "0.1.0"
fxhash = "0.2.1"
autograph-render = { path = "../render" }
autograph-render-gl = { path = "../render-gl" }
