[package]
name = "autograph-shader-macros"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
quote = "0.6.11"
syn = { version = "0.15.26", features = ["full"] }
darling = "0.8.5"
proc-macro2 = { version = "0.4.27", features = ["nightly"] }
lazy_static = "1.2.0"
shaderc = { version = "0.3.16", default-features = false }
regex= "1.1.0"

[lib]
proc-macro = true
